--- a/package.json
+++ b/package.json
@@ -15,19 +15,20 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@prisma/cli": "^2.16.0",
     "@prisma/client": "2.16.0",
     "@reduxjs/toolkit": "^1.5.0",
     "clsx": "^1.1.1",
     "date-fns": "^2.17.0",
     "express": "^4.17.1",
     "faker": "^5.3.1",
+    "formik": "^2.2.9",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "sass": "^1.32.6"
+    "sass": "^1.32.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^14.14.25",
@@ -42,7 +43,7 @@
     "husky": "^5.0.9",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "prisma": "2.16.0",
+    "prisma": "^4.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
